--- a/index.html
+++ b/index.html
@@ -2,9 +2,106 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zenmart</title>
+    <link rel="stylesheet" href="./public/css/command.css">
+    <link rel="stylesheet" href="./public/css/home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="navbar_frame">
+        <div class="container">
+            <div class="navbar_top">
+                <a href="#">
+                    <img src="./public/images/icons/logo.png" alt="">
+                </a>
+                <div class="nav_search_frame">
+                    <div class="search_box">
+                        <div class="category_list">
+                            <select>
+                                <option value="" selected>All Categories</option>
+                                <option value="">Computer</option>
+                            </select>
+                        </div>
+
+                        <input type="text" placeholder="Search  Products...">
+                    </div>
+                    <div class="search_icon_box">
+                        <img src="./public/images/icons/search.svg" alt="">
+                    </div>
+                </div>
+                <div class="nav_top_menu">
+                    <a href="#">
+                        <div class="top_menu_box">
+                            <div class="box_icon_box">
+                                <img src="./public/images/icons/heart.svg" alt="">
+                            </div>
+                            <div class="box_info_box">
+                                <span>Wishlist</span>
+                                <strong>My items</strong>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="top_menu_box">
+                            <div class="box_icon_box">
+                                <img src="./public/images/icons/vector.svg" alt="">
+                            </div>
+                            <div class="box_info_box">
+                                <span>Sign in</span>
+                                <strong>Account</strong>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="top_menu_box">
+                            <div class="box_icon_box">
+                                <div class="basket_count">2</div>
+                                <img src="./public/images/icons/shopping-cart.svg" alt="">
+                            </div>
+                            <div class="box_info_box">
+                                <span>$200.99</span>
+                                <strong>My items</strong>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="navbar_bott">
+                <div class="navbar_bott_menu_box">
+                    <div class="browse_box">
+                        <img src="./public/images/icons/browse.svg" alt="">
+                        <span>Browse Categories</span>
+                    </div>
+                    <div class="navbar_route_menu">
+                        <div class="router_menu">
+                            <a href="#" class="active">Home</a>
+                        </div>
+                        <div class="router_menu">
+                            <a href="#">Shop</a>
+                        </div>
+                        <div class="router_menu">
+                            <a href="#">Orders</a>
+                        </div>
+                        <div class="router_menu">
+                            <a href="#">About</a>
+                        </div>
+                        <div class="router_menu">
+                            <a href="#">Contact</a>
+                        </div>
+                    </div>
+                    <div class="sorting_menu">
+                        <span>Deal of the Day</span>
+                        <span>Hoot Deals</span>
+                        <span>Best  Sellers</span>
+                        <span>New  Arrivals</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
