--- a/index.html
+++ b/index.html
@@ -247,6 +247,178 @@
 
 <!--        category finished-->
 
+<!--        Selling product frame started-->
+
+
+        <div class="selling_product_frame">
+            <div class="container">
+                <div class="category_top">
+                    <span>Top  Selling   Products</span>
+                        <a href="">View All</a>
+                </div>
+                <div class="product_wrapper">
+                    <div class="next_prev_box">
+                        <img src="public/images/icons/next.svg" alt="">
+                    </div>
+
+                    <div class="product_boxes">
+                        <div class="prooduct_box">
+                            <a href="#">
+                                <div class="product_img_box" style="background: url('public/images/products/watch.png'); background-size: cover;" >
+
+                                    <div class="hover_box">
+                                        <button>Add to Cart</button>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="product_content_box">
+
+                                <span class="product_title">Samsung</span>
+                                <a href="">
+                                    <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 reviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+                         <div class="prooduct_box">
+                            <a href="#">
+                                <div class="product_img_box" style="background: url('public/images/products/phone.png'); background-size: cover;" >
+
+                                    <div class="hover_box">
+                                        <button>Add to Cart</button>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="product_content_box">
+
+                                <span class="product_title">iPhone</span>
+                                <a href="">
+                                    <p class="product_desc">Apple iPhone 11 64GB Smartphone - Black.</p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 reviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+                         <div class="prooduct_box">
+                            <a href="#">
+                                <div class="product_img_box" style="background: url('public/images/products/iRobot.png'); background-size: cover;" >
+
+                                    <div class="hover_box">
+                                        <button>Add to Cart</button>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="product_content_box">
+
+                                <span class="product_title">Samsung</span>
+                                <a href="">
+                                    <p class="product_desc">iRobot Roomba i3+ EVO Wi-Fi Connected Self-Empty Robot.</p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 reviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+                         <div class="prooduct_box">
+                            <a href="#">
+                                <div class="product_img_box" style="background: url('public/images/products/dyson.png'); background-size: cover;" >
+
+                                    <div class="hover_box">
+                                        <button>Add to Cart</button>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="product_content_box">
+
+                                <span class="product_title">Samsung</span>
+                                <a href="">
+                                    <p class="product_desc">Dyson V7 Complete Cordless Stick Vacuum - Iron/Blue</p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 reviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                         <div class="next_prev_box" style="transform: scaleX(-1)">
+                        <img src="public/images/icons/next.svg" alt="">
+                    </div>
+                </div>
+                <div class="product_pagination_box">
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+<!--        Selling product frame finished-->
+
 
 
 
