feat: refactor top selling product view

--- a/index.html
+++ b/index.html
@@ -405,67 +405,55 @@
                         <img src="public/images/icons/next.svg" alt="">
                     </div>
                 </div>
-                <div class="product_pagination_box">
+                <!--        Product pagination box-->
+                <div class="pagination_box">
+
+
+                    <div class="pagination_main">
+
+                        <img src="public/images/icons/arrow-prev_next.svg" alt="">
+
+                        <div class="pagination_dot">
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot active">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                        </div>
+
+
+
+                        <img src="public/images/icons/arrow-prev_next.svg" alt="rasm" style="transform: scaleX(-1)">
+
+
+                    </div>
+
+
                 </div>
             </div>
         </div>
 
 
 
+<!--&lt;!&ndash;        advFrame&ndash;&gt;-->
 
 
-
-
-
-<!--        Selling product frame finished-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!--        <div class="adv_frame">-->
+<!--            Members get free shipping* with no order minimum!*Restrictions apply.Try free 30-day trial-->
+<!--        </div>-->
 
 
 
