feat: completed adv section view

--- a/index.html
+++ b/index.html
@@ -448,12 +448,12 @@
 
 
 
-<!--&lt;!&ndash;        advFrame&ndash;&gt;-->
+<!--        advFrame-->
 
 
-<!--        <div class="adv_frame">-->
-<!--            Members get free shipping* with no order minimum!*Restrictions apply.Try free 30-day trial-->
-<!--        </div>-->
+        <div class="adv_frame">
+            Members get free shipping* with no order minimum!*Restrictions apply.Try free 30-day trial
+        </div>
 
 
 
