--- a/index.html
+++ b/index.html
@@ -456,6 +456,58 @@
         </div>
 
 
+        <div class="spec_product_frame">
+            <div class="container">
+                  <div class="category_top">
+                    <span>Headphones</span>
+                        <a href="">View All</a>
+                </div>
+
+                <div class="spec_product_wrapper">
+                    <div class="big_product_box">
+                        <div class="big_product_content">
+                            <span>Now in moon gray</span>
+                            <p>Beats  Studio Buds</p>
+                            <a href="">Shop Now</a>
+                            <div class="hover_border"></div>
+                        </div>
+                        <img src="public/images/products/headphone_big.png" alt="">
+                    </div>
+                    <div class="small_product_wrapper">
+                        <div class="small_product_box">
+                            <div class="small_product_content">
+                                <strong>Over-Ear</strong>
+                                <span>29 items</span>
+                            </div>
+                            <img class="top_img" src="public/images/products/sony_headphone.png" alt="">
+                        </div>
+                         <div class="small_product_box">
+                            <div class="small_product_content">
+                                <strong>On-Ear</strong>
+                                <span>29 items</span>
+                            </div>
+                            <img class="top_img" src="public/images/products/on-ear.png" alt="">
+                        </div>
+                         <div class="small_product_box">
+                            <div class="small_product_content">
+                                <strong>Sports & Fitness</strong>
+                                <span>29 items</span>
+                            </div>
+                            <img class="bottom_img" src="public/images/products/fitness_headphone.png" alt="">
+                        </div>
+                         <div class="small_product_box">
+                            <div class="small_product_content">
+                                <strong>Bluetooth Headphones</strong>
+                                <span>29 items</span>
+                            </div>
+                            <img  class="bottom_img" src="public/images/products/bluetooth_headphones.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
 
 
     </div>
