fix : img position bottom

--- a/index.html
+++ b/index.html
@@ -493,14 +493,14 @@
                                 <strong>Sports & Fitness</strong>
                                 <span>29 items</span>
                             </div>
-                            <img class="bottom_img" src="public/images/products/fitness_headphone.png" alt="">
+                            <img src="public/images/products/fitness_headphone.png" alt="">
                         </div>
                          <div class="small_product_box">
                             <div class="small_product_content">
                                 <strong>Bluetooth Headphones</strong>
                                 <span>29 items</span>
                             </div>
-                            <img  class="bottom_img" src="public/images/products/bluetooth_headphones.png" alt="">
+                            <img src="public/images/products/bluetooth_headphones.png" alt="">
                         </div>
                     </div>
                 </div>
