--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     </div>
 
                     <div class="product_boxes">
-                        <div class="prooduct_box">
+                        <div class="product_box">
                             <a href="#">
                                 <div class="product_img_box" style="background: url('public/images/products/watch.png'); background-size: cover;" >
 
@@ -296,7 +296,7 @@
 
                             </div>
                         </div>
-                         <div class="prooduct_box">
+                         <div class="product_box">
                             <a href="#">
                                 <div class="product_img_box" style="background: url('public/images/products/phone.png'); background-size: cover;" >
 
@@ -330,7 +330,7 @@
 
                             </div>
                         </div>
-                         <div class="prooduct_box">
+                         <div class="product_box">
                             <a href="#">
                                 <div class="product_img_box" style="background: url('public/images/products/iRobot.png'); background-size: cover;" >
 
@@ -364,7 +364,7 @@
 
                             </div>
                         </div>
-                         <div class="prooduct_box">
+                         <div class="product_box">
                             <a href="#">
                                 <div class="product_img_box" style="background: url('public/images/products/dyson.png'); background-size: cover;" >
 
@@ -504,6 +504,203 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+        <div class="tv_frame">
+            <div class="container">
+                 <div class="category_top">
+                    <span>TV & Home Theatre</span>
+                       <div class="">
+                            <a href="">Televisions</a>
+                            <a href="">Digital Cable</a>
+                            <a href=""> Media Streamers</a>
+                            <a href="">Remote Controls</a>
+                       </div>
+                </div>
+
+
+                <div class="tv_wrapper">
+                     <div class="next_prev_box">
+                        <img src="public/images/icons/next.svg" alt="">
+                    </div>
+
+                    <div class="tv_product_boxes">
+                        <div class="tv_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/samsung_tv.png" alt="">
+                                </a>
+                            </div>
+
+                             <div class="product_content_box">
+
+                                <span class="product_title">Samsung</span>
+                                <a href="">
+                                    <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 reviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+                         <div class="tv_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/tcl.png" alt="">
+                                </a>
+                            </div>
+
+                             <div class="product_content_box">
+
+                                <span class="product_title">Samsung</span>
+                                <a href="">
+                                    <p class="product_desc">TCL 3-Series 40" 1080p HD LED Android Smart TV (40S334-CA)</p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 reviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+                         <div class="tv_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/LG-UHD.png" alt="">
+                                </a>
+                            </div>
+
+                             <div class="product_content_box">
+
+                                <span class="product_title">Samsung</span>
+                                <a href="">
+                                    <p class="product_desc">LG 55" 4K UHD HDR OLED webOS Smart TV </p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 reviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+                         <div class="tv_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/LG-OLED.png" alt="">
+                                </a>
+                            </div>
+
+                             <div class="product_content_box">
+
+                                <span class="product_title">Samsung</span>
+                                <a href="">
+                                    <p class="product_desc">LG 55" 4K UHD HDR OLED webOS Smart TV </p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 reviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+                         <div class="tv_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/SONY-TV.png" alt="">
+                                </a>
+                            </div>
+
+                             <div class="product_content_box">
+
+                                <span class="product_title">Samsung</span>
+                                <a href="">
+                                    <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 reviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+
+                     <div class="next_prev_box" style="transform: scaleX(-1)">
+                        <img src="public/images/icons/next.svg" alt="">
+                    </div>
+                </div>
+
+
             </div>
         </div>
 
