feat: completed event  section view

--- a/index.html
+++ b/index.html
@@ -703,6 +703,228 @@
 
             </div>
         </div>
+          <div class="pagination_box">
+
+
+                    <div class="pagination_main">
+
+                        <img src="public/images/icons/arrow-prev_next.svg" alt="">
+
+                        <div class="pagination_dot">
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot active">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                        </div>
+
+
+
+                        <img src="public/images/icons/arrow-prev_next.svg" alt="rasm" style="transform: scaleX(-1)">
+
+
+                    </div>
+
+
+                </div>
+
+
+
+
+
+
+
+
+
+        <div class="event_frame">
+            <div class="container">
+                <div class="top_deals_frame">
+
+                        <span>top deals of the day</span>
+
+                    <div class="top_deals_numbers">
+                       <div class="top_deals_numbers_box">
+                          <strong>178</strong>
+                        <p>Days</p>
+                       </div>
+                       <div class="top_deals_numbers_box">
+                          <strong>178</strong>
+                        <p>Days</p>
+                       </div>
+                       <div class="top_deals_numbers_box">
+                          <strong>178</strong>
+                        <p>Days</p>
+                       </div>
+                       <div class="top_deals_numbers_box">
+                          <strong>178</strong>
+                        <p>Days</p>
+                       </div>
+
+
+
+
+                    </div>
+
+                  <div class="show_more_btn">
+                        <a href="#">Show More</a>
+                  </div>
+
+
+                </div>
+                    <div class="next_prev_box">
+                        <img src="public/images/icons/next.svg" alt="">
+                    </div>
+
+
+                <div class="event_image_wrapper">
+
+                    <div class="event_image_box">
+                        <div class="event_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/sony_notebook.png" alt="">
+                                </a>
+                            </div>
+
+                             <div class="event_product_content_box">
+
+                                <span class="product_title">Samsung</span>
+                                <a href="">
+                                    <p class="product_desc">SAMSUNG Chromebook 4+ 15.6" Intel® Celeron® ...</p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 rviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+                        <div class="event_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/sony_playstation.png" alt="">
+                                </a>
+                            </div>
+
+                             <div class="event_product_content_box">
+
+                                <span class="product_title">Samsung</span>
+                                <a href="">
+                                    <p class="product_desc">SAMSUNG Chromebook 4+ 15.6" Intel® Celeron® ...</p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 rviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+                        <div class="event_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/apple_watch.png" alt="">
+                                </a>
+                            </div>
+
+                             <div class="event_product_content_box">
+
+                                <span class="product_title">Samsung</span>
+                                <a href="">
+                                    <p class="product_desc">SAMSUNG Chromebook 4+ 15.6" Intel® Celeron® ...</p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 rviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+                        <div class="event_product_box">
+                            <div class="product_img">
+                                <a href="">
+                                    <img src="public/images/products/canon_camera.png" alt="">
+                                </a>
+                            </div>
+
+                             <div class="event_product_content_box">
+
+                                <span class="product_title">Samsung</span>
+                                <a href="">
+                                    <p class="product_desc">SAMSUNG Chromebook 4+ 15.6" Intel® Celeron® ...</p>
+                                </a>
+
+                                <div class="review_box">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+                                    <img src="public/images/icons/review.svg" alt="">
+
+                                    <span>3.014 rviews</span>
+                                </div>
+
+                                <div class="price_box">
+                                    <strong>$32.50</strong>
+                                    <span>$45</span>
+                                </div>
+
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
