fix:  fixed and added  next_prev_box to event_frame

--- a/index.html
+++ b/index.html
@@ -507,13 +507,6 @@
             </div>
         </div>
 
-
-
-
-
-
-
-
         <div class="tv_frame">
             <div class="container">
                  <div class="category_top">
@@ -742,13 +735,6 @@
                 </div>
 
 
-
-
-
-
-
-
-
         <div class="event_frame">
             <div class="container">
                 <div class="top_deals_frame">
@@ -921,8 +907,14 @@
                             </div>
                         </div>
 
+                 <div class="next_prev_box">
+                        <img src="public/images/icons/next.svg" alt="">
+                    </div>
+
+
                     </div>
                 </div>
+
             </div>
         </div>
 
