--- a/other/login.html
+++ b/other/login.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="have_acc">
-                <span>Don't have an account? <a href=""><strong>Create account</strong></a></span>
+                <span>Don't have an account? <a href="./signup.html"><strong>Create account</strong></a></span>
 
             </div>
 
